--- a/my-portfolio/src/styles/global.css
+++ b/my-portfolio/src/styles/global.css
@@ -91,7 +91,8 @@ template {
 }
 
 a {
-  background-color: transparent
+  background-color: transparent;
+  text-decoration: underline
 }
 
 a:active,
@@ -560,7 +561,7 @@ a {
   width: 200px;
   background-color: #fff;
   position: fixed !important;
-  z-index: 1;
+  z-index: 4;
   overflow: auto
 }
 
@@ -978,6 +979,11 @@ a {
   }
 }
 
+.hidden {
+  display: none !important;
+}
+
+
 @media (max-width:992px) {
   .w3-sidebar.w3-collapse {
     display: none
@@ -1006,19 +1012,6 @@ a {
 
 .w3-bottom {
   bottom: 0
-}
-
-.w3-overlay {
-  position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2
 }
 
 .w3-display-topleft {
