Adding a css for about

--- a/my-portfolio/src/styles/projects.css
+++ b/my-portfolio/src/styles/projects.css
@@ -58,6 +58,11 @@
   background-color: #fff !important
 }
 
+.w3-opacity,
+.w3-hover-opacity:hover {
+  opacity: 0.60
+}
+
 .w3-opacity-off,
 .w3-hover-opacity-off:hover {
   opacity: 1
